--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NEW_PARAM1=jestyayin935.com
-NEW_PARAM2=bbb.mevzuhls30.cfd
-NEW_PARAM3=trgoals1281.xyz
-NEW_PARAM4=h0.7fdc5a6527bc3dd5.workers.dev
+NEW_PARAM2=yyy.mevzuhls31.cfd
+NEW_PARAM3=trgoals1283.xyz
+NEW_PARAM4=h0.b166ae5584f03416.workers.dev
