--- a/.github/workflows/update-ts.yml
+++ b/.github/workflows/update-ts.yml
@@ -2,7 +2,8 @@ name: Update TS List
 on:
   push:
     paths:
-      - 'config.env'
+      - 'configts'
+      - 'preconfigts'
       - 'iptvts.m3u'
 jobs:
   update:
@@ -12,29 +13,39 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Load Previous Parameters
-        run: source previous_config.env # Load OLD_PARAM values
+        run: |
+          source preconfigts
+          echo "OLD_PARAM1=$OLD_PARAM1"
+          echo "OLD_PARAM2=$OLD_PARAM2"
+          echo "OLD_PARAM3=$OLD_PARAM3"
+          echo "OLD_PARAM4=$OLD_PARAM4"
 
       - name: Load New Parameters
-        run: source config.env # Load NEW_PARAM values
+        run: |
+          source configts
+          echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}"
+          echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}"
+          echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}"
+          echo "NEW_PARAM4=${NEW_PARAM4:-EMPTY}"
 
       - name: Update IPTV List
         run: |
-          sed -i "s|$OLD_PARAM1|$NEW_PARAM1|g" iptvts.m3u
-          sed -i "s|$OLD_PARAM2|$NEW_PARAM2|g" iptvts.m3u
-          sed -i "s|$OLD_PARAM3|$NEW_PARAM3|g" iptvts.m3u
-          sed -i "s|$OLD_PARAM4|$NEW_PARAM4|g" iptvts.m3u
+          sed -i "s|.*$OLD_PARAM1.*|${NEW_PARAM1:-$OLD_PARAM1}|g" iptvts.m3u
+          sed -i "s|.*$OLD_PARAM2.*|${NEW_PARAM2:-$OLD_PARAM2}|g" iptvts.m3u
+          sed -i "s|.*$OLD_PARAM3.*|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u
+          sed -i "s|.*$OLD_PARAM4.*|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u
 
       - name: Update Previous Config File
         run: |
-          echo "OLD_PARAM1=$NEW_PARAM1" > previous_config.env
-          echo "OLD_PARAM2=$NEW_PARAM2" >> previous_config.env
-          echo "OLD_PARAM3=$NEW_PARAM3" >> previous_config.env
-          echo "OLD_PARAM4=$NEW_PARAM4" >> previous_config.env
+          echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts
+          echo "OLD_PARAM2=${NEW_PARAM2:-$OLD_PARAM2}" >> preconfigts
+          echo "OLD_PARAM3=${NEW_PARAM3:-$OLD_PARAM3}" >> preconfigts
+          echo "OLD_PARAM4=${NEW_PARAM4:-$OLD_PARAM4}" >> preconfigts
 
       - name: Commit and Push Updates
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add iptvts.m3u previous_config.env
+          git add iptvts.m3u preconfigts
           git commit -m "Auto update: Parameters changed"
           git push
