--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -2,8 +2,8 @@ name: Update TS List
 on:
   push:
     paths:
-      - 'configts.yml'
-      - 'preconfigts.yml'
+      - 'configts.env'
+      - 'preconfigts.env'
       - 'iptvts.m3u'
 jobs:
   update:
@@ -14,7 +14,7 @@ jobs:
 
       - name: Load Previous Parameters
         run: |
-          source preconfigts.yml
+          source preconfigts.env
           echo "OLD_PARAM1=$OLD_PARAM1"
           echo "OLD_PARAM2=$OLD_PARAM2"
           echo "OLD_PARAM3=$OLD_PARAM3"
@@ -22,7 +22,7 @@ jobs:
 
       - name: Load New Parameters
         run: |
-          source configts.yml
+          source configts.env
           echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}"
           echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}"
           echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}"
