--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -2,8 +2,8 @@ name: Update TS List
 on:
   push:
     paths:
-      - 'configts.env'
-      - 'preconfigts.env'
+      - 'configts'
+      - 'preconfigts'
       - 'iptvts.m3u'
 jobs:
   update:
@@ -14,7 +14,7 @@ jobs:
 
       - name: Load Previous Parameters
         run: |
-          source preconfigts.env
+          source preconfigts
           echo "OLD_PARAM1=$OLD_PARAM1"
           echo "OLD_PARAM2=$OLD_PARAM2"
           echo "OLD_PARAM3=$OLD_PARAM3"
@@ -22,18 +22,28 @@ jobs:
 
       - name: Load New Parameters
         run: |
-          source configts.env
+          source configts
           echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}"
           echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}"
           echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}"
           echo "NEW_PARAM4=${NEW_PARAM4:-EMPTY}"
 
+      - name: Debug IPTV File Before Update
+        run: cat iptvts.m3u || echo "iptvts.m3u dosyası boş!"
+
       - name: Update IPTV List
         run: |
-          sed -i "s|.*$OLD_PARAM1.*|${NEW_PARAM1:-$OLD_PARAM1}|g" iptvts.m3u
-          sed -i "s|.*$OLD_PARAM2.*|${NEW_PARAM2:-$OLD_PARAM2}|g" iptvts.m3u
-          sed -i "s|.*$OLD_PARAM3.*|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u
-          sed -i "s|.*$OLD_PARAM4.*|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u
+          if [ -s iptvts.m3u ]; then
+            sed -i "s|$OLD_PARAM1|${NEW_PARAM1:-$OLD_PARAM1}|g" iptvts.m3u
+            sed -i "s|$OLD_PARAM2|${NEW_PARAM2:-$OLD_PARAM2}|g" iptvts.m3u
+            sed -i "s|$OLD_PARAM3|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u
+            sed -i "s|$OLD_PARAM4|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u
+          else
+            echo "iptvts.m3u dosyası boş! Güncelleme yapılamıyor." >> error.log
+          fi
+
+      - name: Debug IPTV File After Update
+        run: cat iptvts.m3u || echo "iptvts.m3u dosyası boş kaldı!"
 
       - name: Update Previous Config File
         run: |
