--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -28,8 +28,8 @@ jobs:
           echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}"
           echo "NEW_PARAM4=${NEW_PARAM4:-EMPTY}"
 
-      - name: Debug IPTV File Before Update
-        run: cat iptvts.m3u || echo "iptvts.m3u dosyası boş!"
+      - name: Verify IPTV File Before Update
+        run: cat iptvts.m3u || echo "iptvts.m3u is empty!"
 
       - name: Update IPTV List
         run: |
@@ -39,11 +39,11 @@ jobs:
             sed -i "s|$OLD_PARAM3|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u
             sed -i "s|$OLD_PARAM4|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u
           else
-            echo "iptvts.m3u dosyası boş! Güncelleme yapılamıyor." >> error.log
+            echo "iptvts.m3u is empty! Update aborted." >> error.log
           fi
 
-      - name: Debug IPTV File After Update
-        run: cat iptvts.m3u || echo "iptvts.m3u dosyası boş kaldı!"
+      - name: Verify IPTV File After Update
+        run: cat iptvts.m3u || echo "iptvts.m3u remained empty!"
 
       - name: Update Previous Config File
         run: |
