--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -2,8 +2,8 @@ name: Update TS List
 on:
   push:
     paths:
-      - 'configts'
-      - 'preconfigts'
+      - 'configts.env'
+      - 'preconfigts.env'
       - 'iptvts.m3u'
 jobs:
   update:
@@ -14,7 +14,7 @@ jobs:
 
       - name: Load Previous Parameters
         run: |
-          source preconfigts
+          source preconfigts.env
           echo "OLD_PARAM1=$OLD_PARAM1"
           echo "OLD_PARAM2=$OLD_PARAM2"
           echo "OLD_PARAM3=$OLD_PARAM3"
@@ -22,7 +22,7 @@ jobs:
 
       - name: Load New Parameters
         run: |
-          source configts
+          source configts.env
           echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}"
           echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}"
           echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}"
@@ -47,15 +47,15 @@ jobs:
 
       - name: Update Previous Config File
         run: |
-          echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts
-          echo "OLD_PARAM2=${NEW_PARAM2:-$OLD_PARAM2}" >> preconfigts
-          echo "OLD_PARAM3=${NEW_PARAM3:-$OLD_PARAM3}" >> preconfigts
-          echo "OLD_PARAM4=${NEW_PARAM4:-$OLD_PARAM4}" >> preconfigts
+          echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts.env
+          echo "OLD_PARAM2=${NEW_PARAM2:-$OLD_PARAM2}" >> preconfigts.env
+          echo "OLD_PARAM3=${NEW_PARAM3:-$OLD_PARAM3}" >> preconfigts.env
+          echo "OLD_PARAM4=${NEW_PARAM4:-$OLD_PARAM4}" >> preconfigts.env
 
       - name: Commit and Push Updates
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add iptvts.m3u preconfigts
+          git add iptvts.m3u preconfigts.env
           git commit -m "Auto update: Parameters changed"
           git push
