--- a/preconfigts.env
+++ b/preconfigts.env
@@ -1,4 +1,4 @@
-OLD_PARAM1=
-OLD_PARAM2=
-OLD_PARAM3=
-OLD_PARAM4=
+OLD_PARAM1=jestyayin935.com
+OLD_PARAM2=bbb.mevzuhls30.cfd
+OLD_PARAM3=trgoals1281.xyz
+OLD_PARAM4=h0.7fdc5a6527bc3dd5.workers.dev
