--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -17,20 +17,20 @@ jobs:
           set -a
           source preconfigts.env
           set +a
-          echo "OLD_PARAM1=${OLD_PARAM1:-EMPTY}"
-          echo "OLD_PARAM2=${OLD_PARAM2:-EMPTY}"
-          echo "OLD_PARAM3=${OLD_PARAM3:-EMPTY}"
-          echo "OLD_PARAM4=${OLD_PARAM4:-EMPTY}"
+          echo "OLD_PARAM1=${OLD_PARAM1:-EMPTY}" | tee -a debug.log
+          echo "OLD_PARAM2=${OLD_PARAM2:-EMPTY}" | tee -a debug.log
+          echo "OLD_PARAM3=${OLD_PARAM3:-EMPTY}" | tee -a debug.log
+          echo "OLD_PARAM4=${OLD_PARAM4:-EMPTY}" | tee -a debug.log
 
       - name: Load New Parameters
         run: |
           set -a
           source configts.env
           set +a
-          echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}"
-          echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}"
-          echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}"
-          echo "NEW_PARAM4=${NEW_PARAM4:-EMPTY}"
+          echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}" | tee -a debug.log
+          echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}" | tee -a debug.log
+          echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}" | tee -a debug.log
+          echo "NEW_PARAM4=${NEW_PARAM4:-EMPTY}" | tee -a debug.log
 
       - name: Verify IPTV File Before Update
         run: cat iptvts.m3u || echo "iptvts.m3u is empty!"
@@ -38,10 +38,10 @@ jobs:
       - name: Update IPTV List
         run: |
           if [ -s iptvts.m3u ]; then
-            sed -i "s|${OLD_PARAM1:-DEFAULT}|${NEW_PARAM1:-$OLD_PARAM1}|g" iptvts.m3u
-            sed -i "s|${OLD_PARAM2:-DEFAULT}|${NEW_PARAM2:-$OLD_PARAM2}|g" iptvts.m3u
-            sed -i "s|${OLD_PARAM3:-DEFAULT}|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u
-            sed -i "s|${OLD_PARAM4:-DEFAULT}|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u
+            sed -i "s|${OLD_PARAM1:-DEFAULT}|${NEW_PARAM1:-$OLD_PARAM1}|g" iptvts.m3u || echo "Error updating OLD_PARAM1" >> error.log
+            sed -i "s|${OLD_PARAM2:-DEFAULT}|${NEW_PARAM2:-$OLD_PARAM2}|g" iptvts.m3u || echo "Error updating OLD_PARAM2" >> error.log
+            sed -i "s|${OLD_PARAM3:-DEFAULT}|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u || echo "Error updating OLD_PARAM3" >> error.log
+            sed -i "s|${OLD_PARAM4:-DEFAULT}|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u || echo "Error updating OLD_PARAM4" >> error.log
           else
             echo "iptvts.m3u is empty! Update aborted." >> error.log
           fi
@@ -49,17 +49,20 @@ jobs:
       - name: Verify IPTV File After Update
         run: cat iptvts.m3u || echo "iptvts.m3u remained empty!"
 
-      - name: Update Previous Config File
+      - name: Update Previous Config File Safely
         run: |
           echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts.env
           echo "OLD_PARAM2=${NEW_PARAM2:-$OLD_PARAM2}" >> preconfigts.env
           echo "OLD_PARAM3=${NEW_PARAM3:-$OLD_PARAM3}" >> preconfigts.env
           echo "OLD_PARAM4=${NEW_PARAM4:-$OLD_PARAM4}" >> preconfigts.env
 
+      - name: Debug Previous Config After Update
+        run: cat preconfigts.env || echo "preconfigts.env is empty AFTER update!"
+
       - name: Commit and Push Updates
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add iptvts.m3u preconfigts.env
+          git add iptvts.m3u preconfigts.env debug.log error.log
           git commit -m "Auto update: Parameters changed"
           git push
