--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -52,20 +52,7 @@ jobs:
       - name: Verify IPTV File After Update
         run: cat iptvts.m3u || echo "iptvts.m3u remained empty!"
 
-      - name: Update Previous Config File Safely
-        run: |
-          echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts.env
-          echo "OLD_PARAM2=${NEW_PARAM2:-$OLD_PARAM2}" >> preconfigts.env
-          echo "OLD_PARAM3=${NEW_PARAM3:-$OLD_PARAM3}" >> preconfigts.env
-          echo "OLD_PARAM4=${NEW_PARAM4:-$OLD_PARAM4}" >> preconfigts.env
+      - name: Debug Previous Config Before Update
+        run: cat preconfigts.env || echo "preconfigts.env is empty BEFORE update!"
 
-      - name: Debug Previous Config After Update
-        run: cat preconfigts.env || echo "preconfigts.env is empty AFTER update!"
-
-      - name: Commit and Push Updates
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add iptvts.m3u preconfigts.env debug.log error.log
-          git commit -m "Auto update: Parameters changed"
-          git push
+      - name: Update Previous
