--- a/.github/workflows/updatets.yml
+++ b/.github/workflows/updatets.yml
@@ -12,54 +12,28 @@ jobs:
       - name: Clone Repository
         uses: actions/checkout@v2
 
-      - name: Load Previous Parameters
+      - name: Load Parameters
         run: |
-          if [ ! -f preconfigts.env ]; then
-            echo "Error: preconfigts.env does not exist!" > error.log
+          if [ ! -f preconfigts.env ] || [ ! -f configts.env ]; then
+            echo "Error: Required env files are missing!" > error.log
             exit 1
           fi
           source preconfigts.env
-          echo "OLD_PARAM1=${OLD_PARAM1:-EMPTY}" | tee -a debug.log
-          echo "OLD_PARAM2=${OLD_PARAM2:-EMPTY}" | tee -a debug.log
-          echo "OLD_PARAM3=${OLD_PARAM3:-EMPTY}" | tee -a debug.log
-          echo "OLD_PARAM4=${OLD_PARAM4:-EMPTY}" | tee -a debug.log
-
-      - name: Load New Parameters
-        run: |
-          if [ ! -f configts.env ]; then
-            echo "Error: configts.env does not exist!" > error.log
-            exit 1
-          fi
           source configts.env
+          echo "OLD_PARAM1=${OLD_PARAM1:-EMPTY}" | tee -a debug.log
           echo "NEW_PARAM1=${NEW_PARAM1:-EMPTY}" | tee -a debug.log
-          echo "NEW_PARAM2=${NEW_PARAM2:-EMPTY}" | tee -a debug.log
-          echo "NEW_PARAM3=${NEW_PARAM3:-EMPTY}" | tee -a debug.log
-          echo "NEW_PARAM4=${NEW_PARAM4:-EMPTY}" | tee -a debug.log
-
-      - name: Ensure error.log exists
-        run: touch error.log
 
       - name: Update IPTV List
         run: |
           if [ -s iptvts.m3u ]; then
             sed -i "s|$OLD_PARAM1|${NEW_PARAM1:-$OLD_PARAM1}|g" iptvts.m3u || echo "Error updating OLD_PARAM1" >> error.log
-            sed -i "s|$OLD_PARAM2|${NEW_PARAM2:-$OLD_PARAM2}|g" iptvts.m3u || echo "Error updating OLD_PARAM2" >> error.log
-            sed -i "s|$OLD_PARAM3|${NEW_PARAM3:-$OLD_PARAM3}|g" iptvts.m3u || echo "Error updating OLD_PARAM3" >> error.log
-            sed -i "s|$OLD_PARAM4|${NEW_PARAM4:-$OLD_PARAM4}|g" iptvts.m3u || echo "Error updating OLD_PARAM4" >> error.log
           else
             echo "iptvts.m3u is empty! Update aborted." >> error.log
           fi
 
-      - name: Update Previous Config File Safely
+      - name: Update Previous Config File
         run: |
-          if [ -s preconfigts.env ]; then
-            echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts.env
-            echo "OLD_PARAM2=${NEW_PARAM2:-$OLD_PARAM2}" >> preconfigts.env
-            echo "OLD_PARAM3=${NEW_PARAM3:-$OLD_PARAM3}" >> preconfigts.env
-            echo "OLD_PARAM4=${NEW_PARAM4:-$OLD_PARAM4}" >> preconfigts.env
-          else
-            echo "Warning: preconfigts.env is empty. Keeping previous values." >> error.log
-          fi
+          echo "OLD_PARAM1=${NEW_PARAM1:-$OLD_PARAM1}" > preconfigts.env
 
       - name: Commit and Push Updates
         run: |
