--- a/ts-config.env
+++ b/ts-config.env
@@ -1,4 +1,4 @@
-NEW_PARAM1=jestyayin935.com
-NEW_PARAM2=yyy.mevzuhls31.cfd
-NEW_PARAM3=trgoals1283.xyz
-NEW_PARAM4=h0.b166ae5584f03416.workers.dev
+NEW_PARAM1=AAA.BBB:CCC
+NEW_PARAM2=DDDDDDDDDD.EEE
+NEW_PARAM3=EEEEEEEE234.EEE
+NEW_PARAM4=AB.CD.EF.GGGGGGGG
