--- a/.github/workflows/dance-latino.yml
+++ b/.github/workflows/dance-latino.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Merge lists
         run: |
-          echo "#EXTM3U x-tvg-url="https://www.open-epg.com/files/turkey2.xml"" > latino.m3u
+          echo "#EXTM3U x-tvg-url="https://sty.ink/epgp3"" > latino.m3u
           awk 'NR>1' tango.m3u >> latino.m3u
           awk 'NR>1' halay.m3u >> latino.m3u
           awk 'NR>1' rhumba.m3u >> latino.m3u
