--- a/.github/workflows/dance-sirtaki.yml
+++ b/.github/workflows/dance-sirtaki.yml
@@ -23,6 +23,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add latino.m3u
+          git add sirtaki.m3u
           git commit -m "Auto merge"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/7li8li/chacha.git
