--- a/.github/workflows/dance-sirtaki.yml
+++ b/.github/workflows/dance-sirtaki.yml
@@ -8,16 +8,16 @@ jobs:
   update-list:
     runs-on: ubuntu-latest
     steps:
-      - name: Clonning
+      - name: Cloning Repository
         uses: actions/checkout@v2
 
-      - name: Merge lists
+      - name: Merge Lists
         run: |
           echo '#EXTM3U x-tvg-url="https://sty.ink/epgp3"' > sirtaki.m3u
           awk 'NR>1' halay.m3u >> sirtaki.m3u
           awk 'NR>1' mambo.m3u >> sirtaki.m3u
 
-      - name: Commit
+      - name: Commit Changes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -25,5 +25,11 @@ jobs:
           git config --global user.email "actions@github.com"
           git add sirtaki.m3u
           git commit -m "Auto merge"
-          sleep 30
+
+      - name: Pull Remote Changes
+        run: |
+          git pull origin main --rebase
+
+      - name: Push Changes
+        run: |
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/7li8li/chacha.git
