--- a/.github/workflows/dance-sirtaki.yml
+++ b/.github/workflows/dance-sirtaki.yml
@@ -4,11 +4,12 @@ on:
     paths:
       - 'mambo.m3u'
       - 'halay.m3u'
+
 jobs:
   update-list:
     runs-on: ubuntu-latest
     steps:
-      - name: Cloning Repository
+      - name: Clone Repository
         uses: actions/checkout@v2
 
       - name: Merge Lists
@@ -17,12 +18,17 @@ jobs:
           awk 'NR>1' halay.m3u >> sirtaki.m3u
           awk 'NR>1' mambo.m3u >> sirtaki.m3u
 
-      - name: Commit Changes
+      - name: Configure Git
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+
+      - name: Commit Changes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           git add sirtaki.m3u
           git commit -m "Auto merge"
 
