--- a/.github/workflows/dance-sirtaki.yml
+++ b/.github/workflows/dance-sirtaki.yml
@@ -9,7 +9,7 @@ jobs:
   update-list:
     runs-on: ubuntu-latest
     steps:
-      - name: Clone Repository
+      - name: Cloning Repository
         uses: actions/checkout@v2
 
       - name: Merge Lists
@@ -19,23 +19,19 @@ jobs:
           awk 'NR>1' mambo.m3u >> sirtaki.m3u
 
       - name: Configure Git
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
       - name: Commit Changes
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add sirtaki.m3u
           git commit -m "Auto merge"
 
       - name: Pull Remote Changes
         run: |
-          git pull origin main --rebase
+          git pull --rebase origin main || true
 
       - name: Push Changes
         run: |
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/7li8li/chacha.git
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/7li8li/chacha.git || true
