--- a/.github/workflows/dance-latino.yml
+++ b/.github/workflows/dance-latino.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
       - name: Cloning Repository
-        uses: actions/checkout@v3  # Update checkout action version
+        uses: actions/checkout@v3
         
       - name: Merge lists
         run: |
