--- a/.github/workflows/dance-latino.yml
+++ b/.github/workflows/dance-latino.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Merge lists
         run: |
           echo '#EXTM3U x-tvg-url="https://sty.ink/epgp3"' > latino.m3u
+          
+          # Append content from each playlist file, skipping the first line
           awk 'NR>1' tango.m3u >> latino.m3u
           awk 'NR>1' halay.m3u >> latino.m3u
           awk 'NR>1' rhumba.m3u >> latino.m3u
@@ -30,10 +32,11 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
 
-      - name: Fetch latest changes before pushing
+      - name: Fetch latest changes to prevent merge conflicts
         run: |
-          git fetch origin main
-          git pull origin main --rebase  # Ensures no conflicts before committing
+          git fetch origin main  # Ensure latest remote changes are available
+          git reset --hard origin/main  # Force sync local repository with remote
+          git pull origin main --rebase  # Integrate remote changes
 
       - name: Commit changes
         env:
