--- a/.github/workflows/dance-latino.yml
+++ b/.github/workflows/dance-latino.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
       - name: Cloning Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Updated checkout action
 
       - name: Merge lists
         run: |
@@ -32,16 +32,16 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
 
-      - name: Fetch latest changes to prevent merge conflicts
+      - name: Force Sync with Remote Repo
         run: |
-          git fetch origin main  # Ensure latest remote changes are available
-          git reset --hard origin/main  # Force sync local repository with remote
-          git pull origin main --rebase  # Integrate remote changes
+          git fetch origin main  # Get latest remote changes
+          git reset --hard origin/main  # Overwrite local changes with remote version
+          git pull origin main --rebase  # Ensure local repo is fully synced
 
-      - name: Commit changes
+      - name: Commit and Push Changes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add latino.m3u
           git commit -m "Auto merge"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/7li8li/chacha.git
+          git push --force https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/7li8li/chacha.git
