--- a/.github/workflows/dance-latino.yml
+++ b/.github/workflows/dance-latino.yml
@@ -14,7 +14,7 @@ jobs:
     
     steps:
       - name: Cloning Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Merge lists
         run: |
@@ -32,13 +32,18 @@ jobs:
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
 
-      - name: Force Sync with Remote Repo
+      - name: Hard Reset with Remote
         run: |
           git fetch origin main  # Get latest remote changes
-          git reset --hard origin/main  # Fully sync local repo with remote
+          git reset --hard origin/main  # Overwrite local changes with remote version
           git pull origin main --rebase  # Apply remote changes on top of local
 
-      - name: Commit and Force Push Changes
+      - name: Verify Changes Before Commit
+        run: |
+          git status  # Show status before committing
+          git diff  # Check what is actually changing
+
+      - name: Commit and Push Changes
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
